# portfolio-tracker-web

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  deploy-production.sh  docker-compose.yml  env.production.example  next.config.ts  package-lock.json  package.json  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
mcp/: .gitignore  README.md  pyproject.toml
mcp/portfolio_mcp/: __init__.py  server.py
prisma/: database.sqlite  dev.db  schema.prisma  seed.ts  warm-all-caches.ts  warm-price-cache.ts
prisma/dev.db/: database.sqlite
prisma/prisma/: database.sqlite  dev.db
public/: transaction-import-default-sample.csv  transaction-import-tradingview-sample.csv
scripts/: backup-db.sh  deploy-webhook.sh  seed-demo-data.sql  sync-coin-logos.ts
src/: middleware.ts
src/app/: DashboardDataProvider.tsx  DynamicHeader.tsx  PortfolioProvider.tsx  PortfolioSelector.tsx  SWRProvider.tsx  ThemeToggle.tsx  error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/components/: AllocationPieChart.tsx  AuthGuard.tsx  AutoSyncRunner.tsx  ChartCard.tsx  ChartsView.tsx  CryptoIcon.tsx  DashboardOverview.tsx  HoldingsTable.tsx  MobileNavigation.tsx  PortfolioSummary.tsx  SessionProvider.tsx  ShortTimeframeSelector.tsx  TimeframeSelector.tsx
src/hooks/: useDailyPositions.test.ts  useDailyPositions.ts  useExchangeConnection.ts  useMediaQuery.ts  usePnLCalculation.test.ts  usePnLCalculation.ts  usePortfolioData.ts  usePriceData.ts  usePriceIndex.test.ts  usePriceIndex.ts  useStackedComposition.test.ts  (+1 more)
src/lib/: api-key.ts  (+19 more)
(+121 files in other folders)
