[project]
name = "portfolio-mcp"
version = "0.1.0"
description = "MCP server for Portfolio Tracker - query holdings, transactions, P&L, tax reports, and crypto prices conversationally"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
portfolio-mcp = "portfolio_mcp.server:main"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"
